{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ (%@)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$@ (%2$@)"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : ""
          }
        }
      }
    },
    "accept" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accept"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aceptar"
          }
        }
      }
    },
    "alive" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alive"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vivo"
          }
        }
      }
    },
    "all" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Todos"
          }
        }
      }
    },
    "characters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Characters"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personajes"
          }
        }
      }
    },
    "dead" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dead"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Muerto"
          }
        }
      }
    },
    "episodes" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Episodes"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Episodios"
          }
        }
      }
    },
    "error" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error"
          }
        }
      }
    },
    "female" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Female"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Femeino"
          }
        }
      }
    },
    "Female" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Female"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Femenino"
          }
        }
      }
    },
    "filter_by" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter By"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filtrar por"
          }
        }
      }
    },
    "gender" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gender"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Género"
          }
        }
      }
    },
    "genderless" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Genderless"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sin género"
          }
        }
      }
    },
    "information" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Information"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Información"
          }
        }
      }
    },
    "location" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Location"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Localización"
          }
        }
      }
    },
    "male" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Male"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Masculino"
          }
        }
      }
    },
    "Male" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Male"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Masculino"
          }
        }
      }
    },
    "name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nombre"
          }
        }
      }
    },
    "network_error_message" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "There seem to be network problems. Check your settings and try again."
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Parece que hay problemas de red. Revisa tu configuración y vuelve a intentarlo"
          }
        }
      }
    },
    "origin" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Origin"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Origen"
          }
        }
      }
    },
    "response_error_message" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oops...something went wrong, try again later."
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ups...algo falló, vuelve a intentarlo más tarde"
          }
        }
      }
    },
    "search_prompt_characters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search character"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar personaje"
          }
        }
      }
    },
    "status" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Status"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Estado"
          }
        }
      }
    },
    "unknown" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unkwnow"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Desconocido"
          }
        }
      }
    }
  },
  "version" : "1.0"
}