...
                            }
                        } label: {
                            Text("filter_by")
                        }
                    }, label: {
                        Image(systemName: "line.3.horizontal.decrease.circle")
                            .accessibilityIdentifier("filter_button")
                    })
                }
            }
        }
        .tabItem {
            Label(
                RickMortyTabItem.characters.title,
                systemImage: RickMortyTabItem.characters.systemImage
            ).accessibilityIdentifier("characters_tab_item")
        }
        .tag(RickMortyTabItem.characters)
    }
}

#Preview {
...
